# cpp_microservice-gRPC

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docker/: cpp-microservice.dockerfile
learnCpp/: cpptest1.cpp
proto/: score.proto
src/: microservice.cpp  score.grpc.pb.cc  score.grpc.pb.h  score.pb.cc  score.pb.h
